@@ -1,3 +1,14 @@
+2001-07-24  Radek Doulik  <rodo@ximian.com>
+
+	* htmlengine-edit.c (html_engine_next_cell): fixed for multi flow
+	cells
+	(html_engine_prev_cell): likewise
+
+	* htmlengine-edit-tablecell.c
+	(html_engine_delete_table_cell_contents): new method
+
+	* htmlengine-edit-table.c (html_engine_delete_table): new method
+
 2001-07-23  Jon Trowbridge  <trow@ximian.com>
 
 	* htmlengine-search.c (html_engine_search_set_forward): Added.
